# Zeno

./: .gitignore  README.md  pyproject.toml  test_context.py  test_conversation.py  test_embeddings.py  test_entity_time.py  test_extras_calling.py  test_knowledge.py  test_news.py  test_nlu.py  test_no_repeat.py  test_no_repeat_core.py  test_personalise.py  test_platform.py  test_proactive.py  test_registration_integrity.py  test_response_engine.py  test_search_skill.py  test_sync.py  test_system_skill.py  test_voice_engines.py  test_wake_word.py  test_web.py  zeno.service
.github/workflows/: ci.yml
docs/: index.html
zeno/: __main__.py
zeno/audio/: faster_whisper_stt.py  kokoro_tts.py  piper_tts.py  pipewire.py  stt.py  tts.py  vad.py  wake.py  wake_word_nn.py  whisper_stt.py
zeno/core/: contact_store.py  context.py  daemon.py  discover.py  doctor.py  loop.py  no_repeat.py  personalise.py  plugins.py  proactive.py  profile.py  runner.py  sync.py  term.py
zeno/memory/: graph.py  store.py
zeno/nlu/: embeddings.py  entity.py  intent.py  pipeline.py  synonyms.py
zeno/platform/: __init__.py  termux.py
zeno/platform/providers/: base.py  dummy.py  linux.py  termux.py  windows.py
zeno/response/: engine.py
zeno/skills/: base.py  calculator.py  clear.py  coin.py  conversation.py  converter.py  countdown.py  currency.py  dice.py  extras.py  fact.py  fan.py  home_assistant.py  joke.py  knowledge.py  lyrics.py  news.py  notebook.py  notes.py  playlist.py  quote.py  reminders.py  repeat.py  riddle.py  scene.py  search.py  shuffle.py  sleep.py  system.py  time_skill.py  timezone.py  weather.py
zeno/tui/: app.py
zeno/web/: __init__.py  app.py  handler.py  routes.py  server.py
zeno/web/static/: app.js  chat.html  index.html  style.css
